<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".DIY">

        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false"
            app:cardCornerRadius="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/scout_maker"
                android:textSize="30sp" />

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false"
            app:cardCornerRadius="10dp">

            <EditText
                android:id="@+id/activityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/name_of_activity"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false">

            <Spinner
                android:id="@+id/parameter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/parameter_type"
                android:spinnerMode="dropdown" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false"
            app:cardCornerRadius="10dp">

            <EditText
                android:id="@+id/parameterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/name_of_parameter"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/config"
                android:textSize="30sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:id="@+id/textConfig"
            app:cardPreventCornerOverlap="false"
            android:visibility="gone">

            <Spinner
                android:id="@+id/text_config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/text_config"
                android:spinnerMode="dropdown" />
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            app:cardElevation="5dp"
            android:id="@+id/spinnerConfig"
            app:cardPreventCornerOverlap="false"
            app:cardCornerRadius="10dp"
            android:visibility="gone">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                tools:context=".DIY">

                <EditText
                    android:id="@+id/buttonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:ems="10"
                    android:hint="@string/name_of_option"
                    android:inputType="text"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/radioAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_spinner"
                    android:onClick="addSpinner"
                    android:textAllCaps="false"
                    android:textSize="18sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            app:cardElevation="5dp"
            android:id="@+id/numberConfig"
            app:cardPreventCornerOverlap="false"
            app:cardCornerRadius="10dp"
            android:visibility="gone">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                tools:context=".DIY">

                <EditText
                    android:id="@+id/minVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/minVal"
                    android:inputType="number"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/maxVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/maxVal"
                    android:inputType="number"
                    android:singleLine="true" />




            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false">

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="add"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textSize="24sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false">

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="saveAndLoad"
                android:text="@string/finish"
                android:textAllCaps="false"
                android:textSize="24sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false">

            <Button
                android:id="@+id/load"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="saveAndLoad"
                android:text="@string/load"
                android:textAllCaps="false"
                android:textSize="24sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false">

            <Spinner
                android:id="@+id/activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:visibility="gone" />
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>